<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_milktea">

    <fragment
        android:id="@+id/nav_milktea"
        android:name="com.nghiem.rilleyClient.ui.milktea.MilkTeaFragment"
        android:label="@string/menu_milktea"
        tools:layout="@layout/fragment_milk_tea">
        <action android:id="@+id/action_nav_milktea_to_nav_home"
            app:destination="@+id/nav_home"/>
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.nghiem.rilleyClient.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="milktea"
            app:argType="string"
            android:defaultValue="empty"/>
    </fragment>

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.nghiem.rilleyClient.ui.menu.MenuFragment"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_food_detail"
        android:name="com.nghiem.rilleyClient.ui.fooddetail.FoodDetailFragment"
        android:label="@string/menu_food_detail"
        tools:layout="@layout/fragment_food_detail" />

    <fragment
        android:id="@+id/nav_view_orders"
        android:name="com.nghiem.rilleyClient.ui.view_orders.ViewOrdersFragment"
        android:label="@string/menu_view_orders"
        tools:layout="@layout/fragment_view_order" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.nghiem.rilleyClient.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_food_list"
        android:name="com.nghiem.rilleyClient.ui.foodlist.FoodListFragment"
        android:label="@string/menu_food_list"
        tools:layout="@layout/fragment_food_list" />
</navigation>